# Brainware

./: CMakeLists.txt
include/assimp/: revision.h
include/bware/: base.hpp  core.hpp
include/bware/components/: transform.hpp
include/bware/core/: camera.hpp  model.hpp
include/bware/debug/: debugger.hpp  inspector.hpp
include/bware/resources/: material.hpp  mesh.hpp  shader.hpp  texture.hpp
include/glad/: glad.h
resource/: sample.gltf
resource/assets/: sample.gltf
resource/shaders/: fragment.glsl  vertex.glsl
src/: base.cpp  core.cpp  test.cpp
src/components/: transform.cpp
src/core/: camera.cpp  model.cpp
src/debug/: debugger.cpp  inspector.cpp
src/resources/: mesh.cpp  shader.cpp  texture.cpp
src/testing/: main.cpp
test/: main.cpp
